--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
+  },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
