--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:prod": "node dist/server.js",
+    "dev": "NODE_ENV=development vite",
+    "prebuild": "pnpm install",
+    "build": "tsc -b && vite build",
+    "start:prod": "NODE_ENV=production node dist/server.js",
     "start": "sh start.sh",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
