--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development vite",
-    "prebuild": "pnpm install",
-    "build": "tsc -b && vite build",
-    "start:prod": "NODE_ENV=production node dist/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+    "prebuild": "npm install",
+    "build": "tsc -b",
+    "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "start": "sh start.sh",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
