--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "next": "15.2.0",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
+    "react-icons": "^5.5.0",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
