--- a/frontend-next/tsconfig.json
+++ b/frontend-next/tsconfig.json
@@ -18,10 +18,17 @@
         "name": "next"
       }
     ],
+    "types": ["next-auth"],  
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/types"  
+  ],
   "exclude": ["node_modules"]
 }
