--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.4.7",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-use-measure": "^2.1.7",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1"
   },
