--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
     "@types/socket.io": "^3.0.2",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
