--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
-    "prebuild": "npm install",
+    "prebuild": "npm ci",
     "build": "tsc -b",
     "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "start": "sh start.sh",
@@ -15,11 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.12",
+    "@types/unzipper": "^0.10.11",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "socket.io": "^4.8.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
