--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -23,14 +23,18 @@
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
-    "unzipper": "^0.12.3"
+    "unzipper": "^0.12.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
+    "@types/node-fetch": "^2.6.12",
     "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
