--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "framer-motion": "^12.4.7",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
