sychronize sessions, improve artifact ui rendering

--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --legacy-watch --exec ts-node src/server.ts",
     "prebuild": "npm ci",
     "build": "tsc -b",
     "start:prod": "cross-env NODE_ENV=production node dist/server.js",
@@ -15,12 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.8",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/unzipper": "^0.10.11",
     "child_process": "^1.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
     "unzipper": "^0.12.3",
